--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
         <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h2 class="card-title">Quaffle</h2>
-            <img src="https://cdna.artstation.com/p/assets/images/images/052/281/318/large/brandon-sagraves-quaffel0010.jpg?1659412249" class="center" alt="...">
+            <div class="img">
+              <img src="https://cdna.artstation.com/p/assets/images/images/052/281/318/large/brandon-sagraves-quaffel0010.jpg?1659412249" class="center" alt="...">
+              <img class="image2" src="https://raw.githubusercontent.com/morecallan/css102-e6/master/images/soldOut.png" />
+            </div>
             <p class="card-text">The Quaffle is the primary ball used in Quidditch to score goals. This high-quality Quaffle is perfect for practicing your Quidditch skills.</p>
+          
             <p class="available">Available</p>
           </div>
               <ul class="list-group list-group-flush">
